welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T:Array[Int]
	for (i<- 1 to 5){
		T(i)=getCouleurBrosse():Color
		avance
	}
}
